
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;


 int KernelAddr ;
 int MappingKernel ;
 int RESOLVE_SYMBOL_MY (int ,char*) ;
 int api_chgproccnt ;
 int api_current_proc ;
 int api_posix_cred_get ;
 int api_proc_ucred ;
 int lsym_kernel_base (int ) ;
 int printf (char*,int ,...) ;

int ResolveApi(void)
{


    uint64_t base = lsym_kernel_base(MappingKernel);

    api_current_proc = RESOLVE_SYMBOL_MY(MappingKernel, "_current_proc");
    api_proc_ucred = RESOLVE_SYMBOL_MY(MappingKernel, "_proc_ucred");
    api_posix_cred_get = RESOLVE_SYMBOL_MY(MappingKernel, "_posix_cred_get");
    api_chgproccnt = RESOLVE_SYMBOL_MY(MappingKernel, "_chgproccnt");

    printf("ResolveApi: using kernel addr 0x%016llx (file base = 0x%016llx) \n", KernelAddr, base);
    printf("ResolveApi: _current_proc = 0x%016llx  \n", api_current_proc);
    printf("ResolveApi: _proc_ucred = 0x%016llx  \n", api_proc_ucred);
    printf("ResolveApi: _posix_cred_get = 0x%016llx  \n", api_posix_cred_get);
    printf("ResolveApi: _chgproccnt = 0x%016llx  \n", api_chgproccnt);

    return 1;

}
